examples/datalog/11_types/06_int_arithmetic.dl
// Test: Integer Arithmetic Edge Cases
// Category: 11_types
// Description: Tests arithmetic operations on integers

.db create test_int_arith
.db use test_int_arith

// Basic integer data
+nums[(1, 10), (2, 20), (3, 30), (4, 0), (5, -10)].

// Addition - arithmetic in head
view added(Id: int, V+5: int) :- nums(Id, V).
?- added(X, Y).

// Subtraction
view subtracted(Id: int, V-5: int) :- nums(Id, V).
?- subtracted(X, Y).

// Multiplication
view multiplied(Id: int, V*2: int) :- nums(Id, V).
?- multiplied(X, Y).

// Division (integer division)
+divisible[(10, 2), (20, 4), (30, 5), (100, 10)].
view divided(N: int, D: int, N/D: int) :- divisible(N, D).
?- divided(X, Y, Z).

// Modulo
+mods[(10, 3), (20, 7), (15, 4)].
view modded(N: int, D: int, N%D: int) :- mods(N, D).
?- modded(X, Y, Z).

// Cleanup
.db use default
.db drop test_int_arith
